--- a/prueba/parrafos.html
+++ b/prueba/parrafos.html
@@ -67,7 +67,7 @@
             <div class="p-3">
                 <div id="párrafos">
                     <h1 class="text-center">PÁRRAFOS</h1>
-                    <p>Primer párrafo</p>
+                    <p>Primer párrafoooooo</p>
                     <p>Este ya es el segundo y, además,<span1>cambio el color</span1>.</p>
                     <p>tambien hay que usar el strong y em (cursiva)</p>
                     <p><strong>Como por ejemplo aquí </strong></p>
